--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "easyswoole/spl": "^1.2",
         "easyswoole/http-client": "^1.3",
         "psr/simple-cache": "^1.0",
-        "easyswoole/utility": "^1.1",
-        "swoole-kit/cache": "dev-master"
+        "easyswoole/utility": "^1.1"
     },
     "autoload": {
         "psr-4": {
