--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "easyswoole/spl": "^1.4",
         "easyswoole/http-client": "^1.5",
         "psr/simple-cache": "^1.0",
-        "easyswoole/utility": "^1.2"
+        "easyswoole/utility": "^1.2",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
